# fastdaisy-admin

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: docs.json  index.mdx
docs/configurations/: auth.mdx  custom_view.mdx  pages.mdx  perms.mdx  tem_events.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/others/: notes.mdx
fastdaisy_admin/: __init__.py  _menu.py  _queries.py  _types.py  _validators.py  actions.py  ajax.py  application.py  authentication.py  decorators.py  exceptions.py  fields.py  filters.py  formatters.py  forms.py  helpers.py  middleware.py  models.py  pagination.py  templating.py  widgets.py
fastdaisy_admin/auth/: command.py  discover.py  models.py  service.py
fastdaisy_admin/statics/css/: extra_styles.css  styles.css
fastdaisy_admin/statics/js/: main.js  theme-change.js
fastdaisy_admin/templates/fastdaisy_admin/: _macros.html  actions.html  base.html  create.html  delete_confirmation.html  edit.html  error.html  index.html  layout.html  list.html  login.html  pagination.html  records.html
fastdaisy_admin/templates/fastdaisy_admin/parts/: navbar.html  search.html  sidebar.html
tests/: common.py  test_application.py  test_authentication.py  test_base_view.py  test_fields.py  test_file_upload.py  test_filters.py  test_helpers.py  test_menu.py  test_models.py  test_pagination.py
tests/templates/: custom.html
tests/test_forms/: test_forms.py  test_multi_pk_forms.py
tests/test_integrations/: test_sqlalchemy_utils.py  test_sqlmodel.py
tests/test_views/: test_view_async.py  test_view_sync.py
